Fix after header nav not showing on desktop. Closes #199

--- a/assets/scss/components/menu/_nav.scss
+++ b/assets/scss/components/menu/_nav.scss
@@ -14,7 +14,8 @@
 }
 
 .nav-after-header {
+	position: relative;
 	z-index: 9;
-	display: var(--nav-header-display, none);
+	display: var(--nav-after-header-display, none);
 	width: 100%;
 }
