--- a/assets/scss/desktop.scss
+++ b/assets/scss/desktop.scss
@@ -9,6 +9,8 @@
 	--nav-header-padding: 0;
 	--nav-header-background-color: transparent;
 
+	--nav-after-header-display: flex;
+
 	--menu-toggle-display: none;
 
 	--header-section-display: flex;
